fix: better UI scaling
Add calc() margins to help prevent items from overlapping when scaled. Also add UI scaling for Living Death icon.

--- a/src/css/jobgauge.css
+++ b/src/css/jobgauge.css
@@ -84,12 +84,12 @@ body {
 #Conjures {
   --scale: 100;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   margin: 0;
   padding: 0;
   list-style: none;
   transform: scale(calc(var(--scale) / 100));
-  margin-bottom: -.25rem;
+  margin-bottom: calc(-40px * (1 - (var(--scale)/100)));
   transform-origin: top;
 }
 
@@ -174,6 +174,7 @@ body {
   padding: .65rem 0;
   transform: scale(calc(var(--scale) / 100));
   transform-origin: top;
+  margin-bottom: calc(-35px * (1 - (var(--scale)/100)))
 }
 
 #Souls .soul {
@@ -229,6 +230,7 @@ body {
   position: relative;
   transform: scale(calc(var(--scale) / 100));
   transform-origin: top;
+  margin-bottom: calc(-40px * (1 - (var(--scale)/100)));
 }
 
 #Bloat::before {
@@ -286,12 +288,17 @@ body {
 }
 
 #LivingDeath {
+  --scale: 100;
   --order: 1;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   order: var(--order);
+  transform: scale(calc(var(--scale) / 100));
+  transform-origin: top;
+  margin-top: calc(-20px * (1 - (var(--scale)/100)));
+  margin-right: calc(-40px * (1 - (var(--scale)/100)));
 }
 
 #LivingDeath img {
@@ -344,6 +351,8 @@ body {
   padding: .65rem 0;
   transform: scale(calc(var(--scale) / 100));
   transform-origin: top;
+  margin-top: calc(-20px * (1 - (var(--scale)/100)));
+  margin-left: calc(-40px * (1 - (var(--scale)/100)));
 }
 
 #Necrosis > ul {
